# blockchain-auction

./: .gitignore  Cargo.toml  README.md  deploy.sh  test.sh
frontend/: package-lock.json  package.json
frontend/src/: index.js
frontend/src/components/: App.css  App.js  Auctions.js  Bids.js  Items.css  Items.js  MainPage.css  MainPage.js  Sidebar.js  SidebarData.js
frontend/src/components/Accounts/: Accounts.css  Accounts.js
frontend/src/components/AdminPanel/: AdminPanel.css  AdminPanel.js
frontend/src/components/Auctions/: Auctions.css  Auctions.js
frontend/src/components/Items/: Items.css  Items.js
frontend/src/components/Lots/: Lots.css  Lots.js
frontend/src/components/MainPage/: MainPage.css  MainPage.js
frontend/src/components/Sidebar/: Sidebar.js  SidebarData.js
frontend/src/contract/: config.js  utils.js
res/: auction.wasm
src/: buyer.rs  helper.rs  lib.rs  supplier.rs
tests/sim/: main.rs
