[package]
name = "auction"
version = "0.1.0"
authors = ["Max"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0-pre.4"
sha2 = "0.10.2"
uuid = { version = "0.8.2", features = ["v4","serde"] }


[dev-dependencies]
workspaces = "0.3.0"
near-units = "0.2.0"
futures = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
serde_json = "1.0.81"
anyhow = "1.0"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
